syntax = "proto3";

package order;

option go_package = "internal/proto";


message Order {
  int32 id = 1;
  string customer_name = 2;
  double total_amount = 3;
  string created_at = 4;
}

message OrderRequest {
  int32 id = 1;
}

message OrderList {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  string customer_name = 1;
  double total_amount = 2;
}

message UpdateOrderRequest {
  int32 id = 1;
  string customer_name = 2;
  double total_amount = 3;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message Empty {}

service OrderService {
  rpc ListOrders(Empty) returns (OrderList);
  rpc GetOrderById(OrderRequest) returns (Order);
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc UpdateOrder(UpdateOrderRequest) returns (Order);
  rpc DeleteOrder(DeleteOrderRequest) returns (Empty);
}
